# spotfiy-lights

./: .env.example  README.md  main.py  pyproject.toml
templates/: hello.html  login.html
